# affordance_template

./: .gitignore  README.md
affordance_ros_control/: CMakeLists.txt  package.xml
affordance_ros_control/launch/: affordance_ros_control.launch
affordance_ros_control/msg/: AffordanceList.msg
affordance_ros_control/src/: ros_control.py
affordance_ros_control/srv/: AffordanceCommand.srv  ChangeAffordance.srv
affordance_template_library/models/: torus.dae
affordance_template_library/recognition_objects/: handle.yaml
affordance_template_library/robots/: atlas.yaml  dreamer.yaml  pr2.yaml  r2.yaml  r2_legs.yaml  v1.yaml
affordance_template_library/templates/: ISS_taskboard.atdf  drill.atdf  drill.json  lizard.atdf  pickandplace.atdf  pickandplace.json  wheel.atdf  wheel.json  wheel.yaml
affordance_template_library/templates/atdf/: ISS_taskboard.atdf  drill.atdf  pickandplace.atdf  wheel.atdf
affordance_template_markers/: CMakeLists.txt  package.xml  setup.py
affordance_template_markers/nodes/: r2_leg_wheel_test.py  r2_wheel_test.py  v1_wheel_test.py
affordance_template_markers/src/affordance_template_markers/: affordance_template.py  affordance_template_data.py  atdf_parser.py  frame_store.py  recognition_object.py  robot_config.py  robot_interface.py  template_utilities.py
affordance_template_msgs/: CMakeLists.txt  package.xml
affordance_template_msgs/msg/: AffordanceTemplateConfig.msg  RobotConfig.msg  WaypointInfo.msg
affordance_template_msgs/srv/: AddAffordanceTemplate.srv  AffordanceTemplateCommand.srv  GetAffordanceTemplateInfo.srv
affordance_template_server/: CMakeLists.txt  package.xml  setup.py
affordance_template_server/scripts/: client.py  server.py
affordance_template_server/src/: affordance_template_server.py  json_interface.py  protobuf_interface.py  service_interface.py
affordance_template_server_protobuf/: CMakeLists.txt  package.xml  setup.py
affordance_template_server_protobuf/cmake/: FindProtocolBuffers.cmake
affordance_template_server_protobuf/proto/: AffordanceTemplateServerCmd.proto
affordance_templates/: package.xml
affordance_templates/affordance_template_library/include/affordance_template_library/: affordance_template_collection.h  affordance_template_generics.h  affordance_template_parser.h  affordance_template_structure.h  display_object.h  end_effector.h
affordance_templates/affordance_template_library/include/rapidjson/: allocators.h  document.h  pointer.h  reader.h  writer.h
affordance_templates/affordance_template_library/src/: affordance_template_parser.cpp
affordance_templates/affordance_template_markers/include/affordance_template_markers/: affordance_template.h  robot_interface.h
affordance_templates/affordance_template_markers/src/: affordance_template.cpp  robot_interface.cpp
affordance_templates/affordance_template_recorder/include/: json.h
affordance_templates/affordance_template_recorder/src/: at_recorder_src.cpp  jsoncpp.cpp
affordance_templates/affordance_template_server/include/affordance_template_server/: interface.h  server.h
affordance_templates/affordance_template_server/src/: interface.cpp  main.cpp  server.cpp  test_exe.cpp  test_plan.cpp
affordance_templates/rviz_affordance_template_panel/: CMakeLists.txt
affordance_templates/rviz_affordance_template_panel/src/: affordance.cpp  controls.cpp  rviz_affordance_template_panel.cpp  rviz_client.cpp  server_status_monitor.cpp  util.cpp  waypoint_display.cpp
robot_interaction_tools/end_effector_helper/src/: end_effector_helper.cpp
robot_interaction_tools/interactive_controls/src/: interactive_controls.cpp
robot_interaction_tools/moveit_planner/src/: moveit_planner.cpp
robot_interaction_tools/planner_interface/src/: planner_interface.cpp  tolerance_util.cpp
robot_interaction_tools/rit_utils/include/rit_utils/: generic_utils.h  (+3 more)
robot_interaction_tools/rit_utils/src/: predictive_robot_display.cpp  rdf_model.cpp  test_robot_display.cpp
robot_interaction_tools/rviz_interactive_controls_panel/: CMakeLists.txt
robot_interaction_tools/rviz_interactive_controls_panel/src/: group_controls_widget.cpp  interface_utils.cpp  multi_group_controls_widget.cpp  navigation_controls_widget.cpp  rosparam_dialog.cpp  rviz_panel.cpp
rviz_affordance_template_panel/: CMakeLists.txt  manifest.xml  package.xml  plugin_description.xml
rviz_affordance_template_panel/resources/: images.qrc
rviz_affordance_template_panel/src/: Affordance.cpp  Affordance.hpp  AffordanceTemplatePanel.cpp  AffordanceTemplatePanel.hpp  Controls.cpp  Controls.hpp  RecognitionObject.cpp  RecognitionObject.hpp  RobotConfig.hpp  rviz_affordance_template_panel.cpp  rviz_affordance_template_panel.hpp  util.cpp  util.hpp
rviz_affordance_template_panel/ui/: rviz_affordance_template_panel.ui
template_markers/src/template_markers/: affordance_template.py
(+23 files in other folders)
