<?xml version="1.0"?>
<package>
  <name>affordance_template_server</name>
  <version>0.0.1</version>
  <description>Package that holds the server for affordance templates.</description>

  <maintainer email="kimberly.a.hambuchen@nasa.gov">Kimberly Hambuchen</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>interactive_markers</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>affordance_template_markers</build_depend>
  <build_depend>affordance_template_server_protobuf</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <run_depend>interactive_markers</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>affordance_template_markers</run_depend>
  <run_depend>affordance_template_server_protobuf</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>nasa_robot_teleop</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>
</package>